[gd_scene load_steps=12 format=3 uid="uid://4woq8sawmtfw"]

[ext_resource type="Script" path="res://scripts/xr_controller_scene.gd" id="1_3f6f6"]
[ext_resource type="PackedScene" uid="uid://yrg5yt0yvc1q" path="res://addons/godot-xr-tools/hands/scenes/collision/collision_hand.tscn" id="1_qjg8v"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="2_le327"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="2_owqiw"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="3_7qwvu"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="3_66qvq"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="5_mq6cd"]
[ext_resource type="PackedScene" uid="uid://bxm1ply47vaan" path="res://addons/godot-xr-tools/functions/movement_climb.tscn" id="5_x4lt2"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="8_r3c63"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dmd0s"]
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_color = Color(0, 1, 1, 0.25098)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v76d2"]
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_color = Color(0, 1, 1, 0.25098)

[node name="XRController" type="XROrigin3D"]
script = ExtResource("1_3f6f6")

[node name="XRCamera3D" type="XRCamera3D" parent="."]
current = true

[node name="LeftHand" type="XRController3D" parent="."]
tracker = &"left_hand"

[node name="XRToolsCollisionHand" parent="LeftHand" instance=ExtResource("1_qjg8v")]

[node name="LeftHand" parent="LeftHand/XRToolsCollisionHand" instance=ExtResource("2_le327")]

[node name="MovementDirect" parent="LeftHand/XRToolsCollisionHand" instance=ExtResource("2_owqiw")]

[node name="MovementTurn" parent="LeftHand/XRToolsCollisionHand" instance=ExtResource("8_r3c63")]
turn_mode = 2

[node name="FunctionPickup" parent="LeftHand/XRToolsCollisionHand" instance=ExtResource("3_7qwvu")]

[node name="GhostHand" parent="LeftHand" instance=ExtResource("2_le327")]
visible = false
hand_material_override = SubResource("StandardMaterial3D_dmd0s")

[node name="RightHand" type="XRController3D" parent="."]
tracker = &"right_hand"

[node name="XRToolsCollisionHand" parent="RightHand" instance=ExtResource("1_qjg8v")]

[node name="RightHand" parent="RightHand/XRToolsCollisionHand" instance=ExtResource("5_mq6cd")]

[node name="MovementDirect" parent="RightHand/XRToolsCollisionHand" instance=ExtResource("2_owqiw")]
strafe = true

[node name="MovementTurn" parent="RightHand/XRToolsCollisionHand" instance=ExtResource("8_r3c63")]
turn_mode = 2

[node name="FunctionPickup" parent="RightHand/XRToolsCollisionHand" instance=ExtResource("3_7qwvu")]

[node name="MovementClimb" parent="RightHand/XRToolsCollisionHand" instance=ExtResource("5_x4lt2")]

[node name="GhostHand" parent="RightHand" instance=ExtResource("5_mq6cd")]
visible = false
hand_material_override = SubResource("StandardMaterial3D_v76d2")

[node name="PlayerBody" parent="." instance=ExtResource("3_66qvq")]
